# tcexchange-backend

./: Cargo.toml  README.md
.cargo/: config.toml
.sqlx/: query-786c0158363e330bc845f416a651c2e55521e7468ef16b600eabea18c6bead98.json  query-83e8a2edaf10ca374a0730bcb1faa24c5520685e84760ff5074e7a986f2b3c03.json  query-e466253f8e8c352a32872e0bcbc8f4241bd431dab5ca9a0c170a890e689e3829.json
data/: destinations.json
migrations/: 0001_create_destinations.sql
src/: main.rs
src/chat/: mod.rs
src/compare/: mod.rs
src/db/: mod.rs
src/models/: mod.rs
src/routes/: auth.rs  chat.rs  compare.rs  destinations.rs  mod.rs  quiz.rs
