[package]
name = "tcexchange-backend"
version = "0.1.0"
edition = "2024"
default-run = "tcexchange-backend"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "postgres"] }
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15.7" # loads .env file
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0.102" # loads .env file